--- a/login.html
+++ b/login.html
@@ -3,12 +3,19 @@
 <head>
 	<meta charset="utf-8">
 	<title>Bienvenidos a Grupo18-Gr7</title>
+	<link rel="stylesheet" href="estilo.css">
 </head>
 <body>
 	<form action="principal.html" method="POST">
-		<h1>Bienvenidos a la tienda generica</h1>
+		<h2> Te estábamos esperando</h2>
+		<img src="imagenes/Personas_compras.png" alt="compra">
+		<div>
+		<p> Tienda Generica</p>
+		<h1>¡BIENVENIDOS! </h1>
+		<p> Estas listo para realizar tus compras</p>	
+		<p> Ingresa tu Usuario</p>
 		<p>
-			<label>Usuario:</label>
+			<label>Usuario</label>
 			<input type="text" name="nombre" size="20">
 		</p>
 				<p>
@@ -19,6 +26,7 @@
 			<input type="submit" title="Aceptar" name="Aceptar" value="Aceptar">
 			<input type="reset" title="Cancelar" name="Cancelar" value="Cancelar">
 		</p>
+	    </div>
 	</form>	
 
 </body>
