add the maven project whit springboot

--- a/TiendaGenerica/src/main/resources/public/index.html
+++ b/TiendaGenerica/src/main/resources/public/index.html
@@ -6,13 +6,13 @@
 	<link rel="stylesheet" href="estilo.css">
 </head>
 <body>
-	<form action="comprobarusuario.jsp" method="POST">
-		<h2> Te estábamos esperando</h2>
+	<form action="comprobarUsuario.jsp" method="POST">
+		<h2> Te estábamos esperando!!</h2>
 		<img src="imagenes/Personas_compras.png" alt="compra">
 		<div>
-		<p> Tienda Generica</p>
+		<p> Tienda Genérica</p>
 		<h1>¡BIENVENIDOS! </h1>
-		<p> Estas listo para realizar tus compras</p>	
+		<p> Estas listo para realizar tus compras?</p>	
 		<p> Ingresa tu Usuario</p>
 		<p>
 			<label>Usuario</label>
@@ -30,4 +30,4 @@
 	</form>	
 
 </body>
-</html> 
+</html>
