--- a/TiendaGenerica/src/main/resources/public/index.html
+++ b/TiendaGenerica/src/main/resources/public/index.html
@@ -4,9 +4,29 @@
 	<meta charset="utf-8">
 	<title>Bienvenidos a Grupo18-Gr7</title>
 	<link rel="stylesheet" href="estilo.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<script>
+		function auth(){
+			var user = document.getElementById("user").value
+			var password = document.getElementById("password").value
+			var authRequest = $.ajax({
+				type:"GET",
+				url:"http://localhost:8080/users/auth?userName="+user+"&password="+password,
+				success: function(data){
+					if(data == true){
+						alert("Usuario logueado correctamente")
+					}else{
+						alert("Usuario y/o Password incorrectos")
+					}
+					
+				}
+			})
+		}
+	
+	</script>
 </head>
 <body>
-	<form action="comprobarUsuario.jsp" method="POST">
+	<form action="http://localhost:8080/users/auth" method="GET">
 		<h2> Te estábamos esperando!!</h2>
 		<img src="imagenes/Personas_compras.png" alt="compra">
 		<div>
@@ -16,14 +36,14 @@
 		<p> Ingresa tu Usuario</p>
 		<p>
 			<label>Usuario</label>
-			<input type="text" name="usuario" size="20">
+			<input id="user" type="text" name="usuario" size="20">
 		</p>
 				<p>
 			<label>Contraseña</label>
-			<input type="password" name="pass" size="15">
+			<input id="password" type="password" name="pass" size="15">
 		</p>
 		<p>
-			<input type="submit" title="Aceptar" name="Aceptar" value="Aceptar">
+			<input type="button" onclick= "auth()" title="Aceptar" name="Aceptar" value="Aceptar">
 			<input type="reset" title="Cancelar" name="Cancelar" value="Cancelar">
 		</p>
 	    </div>
